<resources>
    <string name="app_name">Musica</string>
    <string name="now_playing">Now Playing</string>
    <string name="artist_name">Michael Jackson</string>
    <string name="track_name">Bad</string>
    <string name="album_name">Bad 25th Anniversary</string>
    <string name="gender_name">Pop</string>
    <string name="artist_category">Artist</string>
    <string name="artist_category_information">Check your favorite songs by artist name</string>
    <string name="albums_category">Albums</string>
    <string name="albums_category_information">Check your best musical albums</string>
    <string name="tracks_category">Tracks</string>
    <string name="tracks_category_information">Check your favorite tracks songs</string>
    <string name="genre_category">Genre</string>
    <string name="genre_category_information">Check your favorite music gender</string>
    <string name="track_bad">Bad</string>
    <string name="bad_album">Bad 25th Anniversary</string>
    <string name="pop_genre">Pop</string>
    <string name="track_perfect">Perfect</string>
    <string name="divide_album">Divide</string>
    <string name="track_i_like_it">I Like It</string>
    <string name="invasion_album">Invasion of Privacy</string>
    <string name="hip_hop_genre">Hip Hop</string>
    <string name="track_criminal">Criminal</string>
    <string name="criminal_album">Criminal</string>
    <string name="reggaettn_genre">Reggaetton</string>
    <string name="track_woman_amen">Woman, Amen</string>
    <string name="woman_amen_album">Woman, Amen</string>
    <string name="country_genre">Country</string>
    <string name="track_ocean_drive">Ocean Drive</string>
    <string name="ocean_drive_album">Ocean Drive</string>
    <string name="deep_house_genre">Deep House</string>
    <string name="track_triste_perro">Triste Perro</string>
    <string name="vikorg_album">Vikorg</string>
    <string name="rock_espanol_genre">Rock Espanol</string>
    <string name="track_raise_your_weapon">Raise your Weapon</string>
    <string name="five_years_album">5 Years of mau5</string>
    <string name="house_genre">House</string>
    <string name="track_live_it_up">Live It Up</string>
    <string name="fifa2018_album">Official Song 2018 FIFA</string>
    <string name="r_b_genre"><![CDATA[R&B]]></string>
    <string name="track_cheerleader">Cheerleader</string>
    <string name="cheerleader_album">Cheerleader</string>
    <string name="artist_jackson">Michael Jackson</string>
    <string name="artist_sheeran">Ed Sheeran</string>
    <string name="artist_cardib">Cardi B</string>
    <string name="artist_ozuna">Ozuna</string>
    <string name="artist_bentley">Dierks Bentley</string>
    <string name="artist_dumont">Duke Dumont</string>
    <string name="artist_loop">Señor Loop</string>
    <string name="artist_deadmouse">deadmau5</string>
    <string name="artist_jam">Nicky Jam</string>
    <string name="artist_omi">Omi</string>
    <string name="nav_main">Main</string>
    <string name="nav_artist">Artist</string>
    <string name="nav_playing">Playing</string>
</resources>
