<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/back_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/nav_main"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/artist"
        android:enabled="true"
        android:icon="@drawable/ic_record_voice_over_black_24dp"
        android:title="@string/nav_artist"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/now_playing"
        android:enabled="true"
        android:icon="@drawable/ic_play_circle_filled_black_24dp"
        android:title="@string/nav_playing"
        app:showAsAction="ifRoom" />


</menu>